--- a/style.css
+++ b/style.css
@@ -873,16 +873,16 @@ margin-top: 50px;
 .section-container2{
     width: 100%;
     flex-direction: column;
-    height: 1020px;
+    height: auto;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 
 
 }
 
 .section-img {
     width: 100%; 
-    height: 200px; 
+    height: auto; 
     order: 2; 
     margin-top: 20px; 
     margin-bottom: 20px;
@@ -918,7 +918,10 @@ margin-top: 50px;
         margin-top: -40px; 
         font-size: 18px; 
     }
-
+/* section 3 */
+.section-content3{
+    margin-bottom: 10px;
+}
     .img-grid-1, .img-grid-2, .img-grid-3, .img-grid-4, .img-grid-5, .img-grid-6, .img-grid-7 {
         width: 100%;
         height: auto;
@@ -933,6 +936,7 @@ margin-top: 50px;
         width: auto;
         flex-direction: column;
         gap: 15px;
+        
     }
     /* <!-- Extra sections --> */
 
